--- a/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -140,16 +140,6 @@
     display: block;
     margin: 0;
     padding: 0;
-    position: absolute;
-    top: 75px;
-    left: 0;
-    right: 0;
-    z-index: 2;
-    background-color: var(--brand-color-canvas-default);
-    width: 100vw;
-    height: calc(100vh - 75px);
-    animation: fade-in-down 500ms;
-    animation-timing-function: var(--brand-animation-easing-default);
   }
 }
 
@@ -471,11 +461,11 @@
 
   .SubdomainNavBar-button-area--visible {
     display: flex;
-    position: absolute;
+    /* position: absolute; */
     left: 0;
     z-index: 99;
     width: 100%;
-    bottom: calc(calc(-100vh - 75px) - -150px);
+    /* bottom: calc(calc(-100vh - 75px) - -150px); */
     height: auto;
     animation-name: fade-in-down-staggered;
     animation-duration: 500ms;
@@ -637,6 +627,24 @@
 
 .SubdomainNavBar-search-result-item-desc {
   color: var(--base-color-scale-black-0);
+}
+
+.SubdomainNavBar-foobarbaz {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  overflow-y: auto;
+  top: 75px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  background-color: var(--brand-color-canvas-default);
+  width: 100vw;
+  height: calc(100vh - 75px);
+  animation: fade-in-down 500ms;
+  animation-timing-function: var(--brand-animation-easing-default);
 }
 
 /*
