don't show menu wrapper when menu is hidden

--- a/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -159,6 +159,10 @@
     animation: fade-in-down 500ms;
     animation-timing-function: var(--brand-animation-easing-default);
   }
+
+  .SubdomainNavBar-menu-wrapper--close {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 48rem) {
