--- a/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -41,7 +41,7 @@
   margin: 0 auto;
 }
 
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 767px) {
   .SubdomainNavBar-inner-container {
     padding: 4px 32px;
   }
@@ -165,7 +165,7 @@
   }
 }
 
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 767px) {
   .SubdomainNavBar-primary-nav-list {
     display: flex;
     align-items: center;
@@ -177,7 +177,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 767px) {
   .SubdomainNavBar-primary-nav-list {
     max-width: 100px;
   }
@@ -216,7 +216,7 @@
   }
 }
 
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 767px) {
   .SubdomainNavBar-primary-nav-list-item--visible {
     order: 0;
     visibility: visible;
@@ -258,7 +258,7 @@
   }
 }
 
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 767px) {
   .SubdomainNavBar-link {
     font-family: var(--brand-heading-fontFamily);
     font-weight: var(--base-text-weight-semibold);
@@ -324,7 +324,7 @@
   display: none;
 }
 
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 767px) {
   .SubdomainNavBar-more-link {
     cursor: pointer;
     appearance: none;
@@ -437,7 +437,7 @@
   transform: rotate(45deg) translateY(3px);
 }
 
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 767px) {
   .SubdomainNavBar-search-button:hover,
   .SubdomainNavBar-menu-button:hover {
     border: var(--brand-borderWidth-thick) solid var(--brand-SubdomainNavBar-border-button-hover);
@@ -476,7 +476,7 @@
   min-width: 0;
 }
 
-@media screen and (max-width: 48rem) {
+@media screen and (max-width: 767px) {
   .SubdomainNavBar-button-area {
     display: none;
   }
@@ -545,7 +545,7 @@
   }
 }
 
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 767px) {
   .SubdomainNavBar-search-dialog {
     position: absolute;
     top: 0;
@@ -573,7 +573,7 @@
   gap: var(--base-size-4);
 }
 
-@media screen and (min-width: 48rem) {
+@media screen and (min-width: 767px) {
   .SubdomainNavBar-search-dialog-control-area {
     max-width: 570px;
     margin: 0 auto;
