--- a/packages/react/src/Box/Box.module.css
+++ b/packages/react/src/Box/Box.module.css
@@ -2708,6 +2708,66 @@
   border-width: var(--brand-borderWidth-thicker);
 }
 
+.Box-borderBlockStartWidth--thin {
+  border-width: 0;
+  border-block-start-width: var(--brand-borderWidth-thin);
+}
+
+.Box-borderBlockStartWidth--thick {
+  border-width: 0;
+  border-block-start-width: var(--brand-borderWidth-thick);
+}
+
+.Box-borderBlockStartWidth--thicker {
+  border-width: 0;
+  border-block-start-width: var(--brand-borderWidth-thicker);
+}
+
+.Box-borderInlineEndWidth--thin {
+  border-width: 0;
+  border-right-width: var(--brand-borderWidth-thin);
+}
+
+.Box-borderInlineEndWidth--thick {
+  border-width: 0;
+  border-right-width: var(--brand-borderWidth-thick);
+}
+
+.Box-borderInlineEndWidth--thicker {
+  border-width: 0;
+  border-right-width: var(--brand-borderWidth-thicker);
+}
+
+.Box-borderBlockEndWidth--thin {
+  border-width: 0;
+  border-bottom-width: var(--brand-borderWidth-thin);
+}
+
+.Box-borderBlockEndWidth--thick {
+  border-width: 0;
+  border-bottom-width: var(--brand-borderWidth-thick);
+}
+
+.Box-borderBlockEndWidth--thicker {
+  border-width: 0;
+  border-bottom-width: var(--brand-borderWidth-thicker);
+}
+
+.Box-borderInlineStartWidth--thin {
+  border-width: 0;
+  border-left-width: var(--brand-borderWidth-thin);
+}
+
+.Box-borderInlineStartWidth--thick {
+  border-width: 0;
+  border-left-width: var(--brand-borderWidth-thick);
+}
+
+.Box-borderInlineStartWidth--thicker {
+  border-width: 0;
+  border-left-width: var(--brand-borderWidth-thicker);
+}
+
 /*
 * 14. Border Color
 */
