add font-smoothing option to improve rendering on macOS devices

--- a/packages/react/src/css/reset.css
+++ b/packages/react/src/css/reset.css
@@ -38,6 +38,11 @@ html:focus-within {
   scroll-behavior: smooth;
 }
 
+html {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 /* Set core body defaults */
 body {
   min-height: 100vh;
