InlineLinks inherit text size even with custom css

--- a/packages/react/src/InlineLink/InlineLink.module.css
+++ b/packages/react/src/InlineLink/InlineLink.module.css
@@ -13,6 +13,7 @@
 
 .InlineLink,
 .InlineLink > span {
+  font-size: inherit;
   font-weight: inherit;
   color: var(--brand-InlineLink-color-rest);
 }
