also inherit line-height

--- a/packages/react/src/InlineLink/InlineLink.module.css
+++ b/packages/react/src/InlineLink/InlineLink.module.css
@@ -14,6 +14,7 @@
 .InlineLink,
 .InlineLink > span {
   font-size: inherit;
+  line-height: inherit;
   font-weight: inherit;
   color: var(--brand-InlineLink-color-rest);
 }
