--- a/packages/react/src/Bento/Bento.features.stories.module.css
+++ b/packages/react/src/Bento/Bento.features.stories.module.css
@@ -50,7 +50,8 @@
 }
 
 .CustomElement {
-  --border-width: var(--base-size-4);
+  --custom-border-width: 4px;
+
   position: absolute;
   display: flex;
   justify-content: center;
@@ -58,19 +59,20 @@
   width: 100px;
   height: 100px;
   margin-top: var(--brand-Bento-content-padding-spacious);
+
   color: white;
   border-radius: var(--brand-borderRadius-full);
   z-index: 0;
-  box-shadow: 0 0 120 48px rgb(87 0 189 / 49%), 0 0 100px 190px rgb(87 0 189 / 16%);
+  box-shadow: 0px 0px 120px 48px rgb(87 0 189 / 49%), 0px 0px 100px 190px rgb(87 0 189 / 16%);
 
   &::before {
-    content: '';
     position: absolute;
-    top: calc(-1 * var(--border-width) + 5px);
-    left: calc(-1 * var(--border-width) + 5px);
+    content: '';
+    top: calc(-1 * var(--custom-border-width) + 5px);
+    left: calc(-1 * var(--custom-border-width) + 5px);
     z-index: -1;
-    width: calc(100% + var(--border-width) * 2 - 10px);
-    height: calc(100% + var(--border-width) * 2 - 10px);
+    width: calc(100% + var(--custom-border-width) * 2 - 10px);
+    height: calc(100% + var(--custom-border-width) * 2 - 10px);
     background: var(--brand-color-canvas-default);
     border-radius: var(--brand-borderRadius-full);
     z-index: 0;
@@ -79,11 +81,11 @@
   &::after {
     position: absolute;
     content: '';
-    top: calc(-1 * var(--border-width));
-    left: calc(-1 * var(--border-width));
+    top: calc(-1 * var(--custom-border-width));
+    left: calc(-1 * var(--custom-border-width));
     z-index: -1;
-    width: calc(100% + var(--border-width) * 2);
-    height: calc(100% + var(--border-width) * 2);
+    width: calc(100% + var(--custom-border-width) * 2);
+    height: calc(100% + var(--custom-border-width) * 2);
     background: radial-gradient(circle at top left, #096bde, #0dff50, #8e47fe, #7c3ffe, #140fff);
 
     border-radius: var(--brand-borderRadius-full);
