fix arrow hover effect

--- a/packages/react/src/Card/Card.module.css
+++ b/packages/react/src/Card/Card.module.css
@@ -52,7 +52,7 @@
   border: var(--brand-borderWidth-thin) solid var(--brand-color-border-default);
 }
 
-.Card__inner {
+.Card__outer {
   height: 100%;
 }
 
