--- a/packages/react/src/InlineLink/InlineLink.module.css
+++ b/packages/react/src/InlineLink/InlineLink.module.css
@@ -13,7 +13,9 @@
 
 .InlineLink,
 .InlineLink > span {
+  font-size: inherit;
   font-weight: inherit;
+  line-height: inherit;
   color: var(--brand-InlineLink-color-rest);
 }
 
