--- a/packages/react/src/Text/Text.module.css
+++ b/packages/react/src/Text/Text.module.css
@@ -61,9 +61,9 @@
   line-height: var(--brand-text-lineHeight-100);
 }
 
-.Text--weight-black,
-.Text-narrow--weight-black {
-  font-weight: var(--base-text-weight-black);
+.Text--weight-heavy,
+.Text-narrow--weight-heavy {
+  font-weight: var(--base-text-weight-heavy);
 }
 
 .Text--weight-extrabold,
@@ -86,9 +86,9 @@
   font-weight: var(--base-text-weight-medium);
 }
 
-.Text--weight-regular,
-.Text-narrow--weight-regular {
-  font-weight: var(--base-text-weight-regular);
+.Text--weight-normal,
+.Text-narrow--weight-normal {
+  font-weight: var(--base-text-weight-normal);
 }
 
 .Text--weight-light,
@@ -102,8 +102,8 @@
 }
 
 @media screen and (min-width: 48rem) {
-  .Text-regular--weight-black {
-    font-weight: var(--base-text-weight-black);
+  .Text-regular--weight-heavy {
+    font-weight: var(--base-text-weight-heavy);
   }
 
   .Text-regular--weight-extrabold {
@@ -122,8 +122,8 @@
     font-weight: var(--base-text-weight-medium);
   }
 
-  .Text-regular--weight-regular {
-    font-weight: var(--base-text-weight-regular);
+  .Text-regular--weight-normal {
+    font-weight: var(--base-text-weight-normal);
   }
 
   .Text-regular--weight-light {
@@ -136,8 +136,8 @@
 }
 
 @media screen and (min-width: 80rem) {
-  .Text-wide--weight-black {
-    font-weight: var(--base-text-weight-black);
+  .Text-wide--weight-heavy {
+    font-weight: var(--base-text-weight-heavy);
   }
 
   .Text-wide--weight-extrabold {
@@ -156,8 +156,8 @@
     font-weight: var(--base-text-weight-medium);
   }
 
-  .Text-wide--weight-regular {
-    font-weight: var(--base-text-weight-regular);
+  .Text-wide--weight-normal {
+    font-weight: var(--base-text-weight-normal);
   }
 
   .Text-wide--weight-light {
