revert SubdomainNavBar-button-area to inline-flex

--- a/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -464,7 +464,7 @@
 }
 
 .SubdomainNavBar-button-area {
-  display: inline-block;
+  display: inline-flex;
   gap: var(--base-size-16);
   align-items: center;
   min-width: 0;
