SubdomainNavBar overflow fix (#451)
* wip

* fix menu overflow bug

* add MobileMenuOpenManyItems story

* add changeset

* remove commented out CSS

* use windowSize hook to determine if menu should be hidden

* github-actions[bot] Regenerated snapshots

* don't show menu wrapper when menu is hidden

* github-actions[bot] Regenerated snapshots

* increase timeout for screenshot

* github-actions[bot] Regenerated snapshots

* github-actions[bot] Regenerated snapshots

* reset snapshots

* reset other snapshots

* github-actions[bot] Regenerated snapshots

* change MobileMenuOpenManyItems.parameters to iphone5

* github-actions[bot] Regenerated snapshots

* increase timeout for Mobile Menu Open Many Items spec

* github-actions[bot] Regenerated snapshots

* increase timeout

* github-actions[bot] Regenerated snapshots

* github-actions[bot] Regenerated snapshots

* CTAs should appear at exactly 768 pixels, not 769

* hide title unless the viewport is 'small' or greater

* Update .changeset/friendly-deers-obey.md

Co-authored-by: Rez <13340707+rezrah@users.noreply.github.com>

* use rem instead of px

* only fix on < medium screens

* github-actions[bot] Regenerated snapshots

* reset snapshots to main

* change rule to
**max**-width

* github-actions[bot] Regenerated snapshots

* reset avatar snapshot

* reset to 48rem

* more reversions

* revert

* fix reverts

* wip

* fix

* reset conflicts

* github-actions[bot] Regenerated snapshots

* reset avatar snapshot

* revert SubdomainNavBar-button-area to inline-flex

* hide titles when width is less than 'Small'

* github-actions[bot] Regenerated snapshots

* reset erroneous snapshots

---------

Co-authored-by: joseph-lozano <joseph-lozano@users.noreply.github.com>
Co-authored-by: Rez <13340707+rezrah@users.noreply.github.com>

--- a/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -140,16 +140,28 @@
     display: block;
     margin: 0;
     padding: 0;
+  }
+
+  .SubdomainNavBar-menu-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow-y: auto;
     position: absolute;
     top: 75px;
     left: 0;
     right: 0;
+    bottom: 0;
     z-index: 2;
     background-color: var(--brand-color-canvas-default);
     width: 100vw;
     height: calc(100vh - 75px);
     animation: fade-in-down 500ms;
     animation-timing-function: var(--brand-animation-easing-default);
+  }
+
+  .SubdomainNavBar-menu-wrapper--close {
+    display: none;
   }
 }
 
@@ -471,11 +483,9 @@
 
   .SubdomainNavBar-button-area--visible {
     display: flex;
-    position: absolute;
     left: 0;
     z-index: 99;
     width: 100%;
-    bottom: calc(calc(-100vh - 75px) - -150px);
     height: auto;
     animation-name: fade-in-down-staggered;
     animation-duration: 500ms;
