Remove `hsl` and use Primitive v8 colors (#442)
* convert to hex

* video player tokens

* cleanup more hsl

* revert version bump

* fix build, docs and remove hsl-specific build configurations

* Create cool-comics-dream.md

* fix tests

* fix white/black

* Update packages/design-tokens/src/tokens/functional/components/subdomain-nav-bar/colors.js

* remove merge conflict artifact

* address feedback

* fix snapshots

* remove old enterprise snapshot

* revert opacity difference on anchor nav overlay

* Update .changeset/cool-comics-dream.md

Co-authored-by: Rez <13340707+rezrah@users.noreply.github.com>

---------

Co-authored-by: Reza Rahman <13340707+rezrah@users.noreply.github.com>

--- a/packages/react/src/AnchorNav/AnchorNav.module.css
+++ b/packages/react/src/AnchorNav/AnchorNav.module.css
@@ -1,6 +1,6 @@
 /*
  * AnchorNav
- * 
+ *
  * 1. Globals
  * 2. AnchorNav root and inner bounding containers
  * 3. AnchorNav links
@@ -331,7 +331,8 @@
     width: 100%;
     height: 100vh; /* Keep as fallback */
     height: 100dvh;
-    background: hsla(var(--base-color-scale-black-0-hsl) / 0.5);
+    /* replace with overlay-backdrop-bgColor */
+    background: #00000080;
     transform: translateZ(-1px);
     animation: fade-in 0.5s;
     animation-timing-function: var(--brand-animation-easing-glide);
